--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon index.js",
-    "api": "echo 'Local API listening on PORT 5000' & json-server --watch api/productos.json -p 5000 -q",
+    "api": "echo 'Local API listening on PORT 5000' & json-server --watch api/data.json -p 5000 -q",
     "start": "concurrently \"npm run server\" \"npm run api\""
   },
   "author": "fernandoiosono",
