--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.1",
     "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
@@ -19,7 +20,8 @@
     "react-router-dom": "^6.16.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "styled-components": "^6.0.8"
+    "styled-components": "^6.0.8",
+    "vite-plugin-environment": "^1.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
