--- a/Client/package.json
+++ b/Client/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.1",
+    "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^1.9.6",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
     "react": "^18.2.0",
@@ -22,7 +24,9 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^6.0.8",
-    "vite-plugin-environment": "^1.1.3"
+    "sweetalert2": "^11.7.32",
+    "vite-plugin-environment": "^1.1.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -32,6 +36,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "sass": "^1.69.0",
     "vite": "^4.4.5"
   }
 }
