--- a/Server/package.json
+++ b/Server/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "server": "nodemon index.js",
+    "api": "echo 'Local API listening on PORT 5000' & json-server --watch api/data.json -p 5000 -q",
+    "start": "concurrently \"npm run server\" \"npm run api\""
   },
   "author": "fernandoiosono",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.1",
+    "concurrently": "^8.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "json-server": "^0.17.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
