--- a/Client/package.json
+++ b/Client/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "serve dist -s -n -l -p $PORT"
+    "start": "serve dist -s -l tcp://0.0.0.0:$PORT"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.1",
