Configuracion de Stripe en Backend

--- a/Server/config.env
+++ b/Server/config.env
@@ -14,3 +14,6 @@ LAPI_URL_CATEGORIES=http://localhost:5000/categories
 
 # SERVER INFO (DO NOT CHANGE)
 LOCALHOST_PORT=3001
+
+# INFO STRIPE
+SECRET_KEY = clave secreta Stripe
