--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,8 @@
     "@auth0/auth0-react": "^2.2.1",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^1.9.6",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.9",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
@@ -37,9 +39,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-
     "vite": "^4.4.5",
     "vite-plugin-environment": "^1.1.3"
-
   }
 }
