--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,11 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^1.9.6",
     "@stripe/react-stripe-js": "^2.3.1",
